--- a/p8105_hw3_zw2716.Rmd
+++ b/p8105_hw3_zw2716.Rmd
@@ -7,11 +7,14 @@ output: github_document
 
 ```{r setup, include=FALSE}
 library(tidyverse)
+
+#devtools::install_github("p8105/p8105.datasets")
 library(p8105.datasets)
+
 knitr::opts_chunk$set(
-	fig.width = 6, 
-  fig.asp = .6,
-  out.width = "90%"
+    fig.width = 6, 
+    fig.asp = .6,
+    out.width = "90%"
 )
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
 options(
