--- a/p8105_hw3_zw2716.Rmd
+++ b/p8105_hw3_zw2716.Rmd
@@ -7,7 +7,9 @@ output: github_document
 
 ```{r setup, include=FALSE}
 library(tidyverse)
-
+#library(rnoaa)
+library(ggridges)
+library(patchwork)
 #devtools::install_github("p8105/p8105.datasets")
 library(p8105.datasets)
 
@@ -52,7 +54,7 @@ This "problem" focuses on structure of your submission, especially the use git a
 data("instacart")
 ```
 
-This dataset contains `r nrow(instacart)` rows and ... columns. 
+This dataset contains `r nrow(instacart)` rows and `r ncol(instacart)`  columns. 
 
 Observations are the level of items in orders by user. There are user / order variables -- user ID, order ID, order day, and order hour. There are also item variables -- name, aisle, department, and some numeric codes. 
 
@@ -111,23 +113,59 @@ instacart %>%
 
 ### Problem 2
 
-First, define a path to Problem 2 dataset. 
-
-```{r}
-path_to_P2_data = "./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv"
+#### Load, tidy, and otherwise wrangle the accelerometer data. 
+```{r accelerometer, message = F}
+path_to_P2_data = "./data/accel_data.csv"
+accelerometer = read_csv(path_to_P2_data) %>% 
+    janitor::clean_names() %>% 
+    pivot_longer(
+        cols = starts_with("activity_"),
+        names_to = 'activity_number',
+        values_to = "activity_minute",
+        names_prefix = "activity_") %>% 
+    mutate(
+        activity_minute = as.numeric(activity_minute),
+        activity_number = as.numeric(activity_number),
+        day = factor(day),
+        # add weekday_vs_weekend variable
+        week_end_vs_day = ifelse(day_id == c(3,4), "weekend", "weekday")
+    )
+skimr::skim_without_charts(accelerometer)
 ```
 
+After tidy and wrangle the data, the resulting _**accelerometer**_ data contains `r nrow(accelerometer)` rows and `r ncol(accelerometer)` columns. The variables in the _**accelerometer**_ are: `r names(accelerometer)`. Specifically, **weekday_vs_weekend** shows whether the day is a weekday or weekend; **activity_minute** and **activity_number** shows the minute for each activities.
 
-Read the - dataset, 
-
-```{r}
-
-   
+#### Traditional analyses of accelerometer data 
+```{r total_activity, warning = F, message = F}
+# aggregate activity_minute to get total_activity var. for each day
+accelerometer %>% 
+    group_by(week,day) %>% 
+    summarize(total_activity = sum(activity_minute)) %>% 
+    # create a table showing these totals
+    pivot_wider(names_from = day,
+                values_from = total_activity) %>% 
+    knitr::kable()
 ```
+
+Apparent trend I noticed is that week 4 and 5's Saturday both have the exact same amount of low activity, so I am a little curious whether that two numbers are resulted from reading error or technical error, or the person just happen to move less and has the same amount of activity. Another potential trend is that this person has relatively the same amount of activity on Wednesdays and Thursdays.
+
+#### single-panel plot: 24-hour activity time courses for each day
+```{r single-panel plot, warning = F, message = F}
+accelerometer %>% 
+    ggplot(aes(x = activity_number, 
+               y = activity_minute, 
+               color = day, group = day_id)) +
+    geom_smooth(se = F, method = "loess", geom = "line", alpha = 0.5) +
+    labs(title = "24-hour activity time courses for each day",
+         x = "Time in a day (in minutes)",
+         y = "Activity Count") +
+    guides(color = guide_legend(nrow = 1, byrow = T))
+```
+Based on the above graph, I see the person has more activity during the (middle of the) day, and less/no activity during the early morning and late night. This makes sense as people generally asleep during the early morning and late night, and work during the (middle of the) day. In addition, this person seems to very low (almost 0) activities on one Saturday and Monday, maybe this is due to the person did not (forgot to) put on the accelerometer as him/she started the day.
 
 ### Problem 3
 First,
 
-```{r}
-
+```{r load noaa data}
+data("ny_noaa") 
 ```
