--- a/p8105_hw3_zw2716.md
+++ b/p8105_hw3_zw2716.md
@@ -1,7 +1,7 @@
 Homework 3
 ================
 Iris (Ziyi) Wang
-2020-10-06
+2020-10-10
 
 ### Due date
 
@@ -30,7 +30,7 @@ data from local files, and reasonable naming structures for your files.
 data("instacart")
 ```
 
-This dataset contains 1384617 rows and … columns.
+This dataset contains 1384617 rows and 15 columns.
 
 Observations are the level of items in orders by user. There are user /
 order variables – user ID, order ID, order day, and order hour. There
@@ -126,13 +126,121 @@ instacart %>%
 
 ### Problem 2
 
-First, define a path to Problem 2 dataset.
+#### Load, tidy, and otherwise wrangle the accelerometer data.
 
 ``` r
-path_to_P2_data = "./data/NYC_Transit_Subway_Entrance_And_Exit_Data.csv"
+path_to_P2_data = "./data/accel_data.csv"
+accelerometer = read_csv(path_to_P2_data) %>% 
+    janitor::clean_names() %>% 
+    pivot_longer(
+        cols = starts_with("activity_"),
+        names_to = 'activity_number',
+        values_to = "activity_minute",
+        names_prefix = "activity_") %>% 
+    mutate(
+        activity_minute = as.numeric(activity_minute),
+        activity_number = as.numeric(activity_number),
+        day = factor(day),
+        # add weekday_vs_weekend variable
+        week_end_vs_day = ifelse(day_id == c(3,4), "weekend", "weekday")
+    )
+skimr::skim_without_charts(accelerometer)
 ```
 
-Read the - dataset,
+|                                                  |               |
+| :----------------------------------------------- | :------------ |
+| Name                                             | accelerometer |
+| Number of rows                                   | 50400         |
+| Number of columns                                | 6             |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_   |               |
+| Column type frequency:                           |               |
+| character                                        | 1             |
+| factor                                           | 1             |
+| numeric                                          | 4             |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ |               |
+| Group variables                                  | None          |
+
+Data summary
+
+**Variable type: character**
+
+| skim\_variable     | n\_missing | complete\_rate | min | max | empty | n\_unique | whitespace |
+| :----------------- | ---------: | -------------: | --: | --: | ----: | --------: | ---------: |
+| week\_end\_vs\_day |          0 |              1 |   7 |   7 |     0 |         2 |          0 |
+
+**Variable type: factor**
+
+| skim\_variable | n\_missing | complete\_rate | ordered | n\_unique | top\_counts                                |
+| :------------- | ---------: | -------------: | :------ | --------: | :----------------------------------------- |
+| day            |          0 |              1 | FALSE   |         7 | Fri: 7200, Mon: 7200, Sat: 7200, Sun: 7200 |
+
+**Variable type: numeric**
+
+| skim\_variable   | n\_missing | complete\_rate |   mean |     sd | p0 |    p25 |   p50 |     p75 | p100 |
+| :--------------- | ---------: | -------------: | -----: | -----: | -: | -----: | ----: | ------: | ---: |
+| week             |          0 |              1 |   3.00 |   1.41 |  1 |   2.00 |   3.0 |    4.00 |    5 |
+| day\_id          |          0 |              1 |  18.00 |  10.10 |  1 |   9.00 |  18.0 |   27.00 |   35 |
+| activity\_number |          0 |              1 | 720.50 | 415.70 |  1 | 360.75 | 720.5 | 1080.25 | 1440 |
+| activity\_minute |          0 |              1 | 267.04 | 443.16 |  1 |   1.00 |  74.0 |  364.00 | 8982 |
+
+After tidy and wrangle the data, the resulting ***accelerometer*** data
+contains 50400 rows and 6 columns. The variables in the
+***accelerometer*** are: week, day\_id, day, activity\_number,
+activity\_minute, week\_end\_vs\_day. Specifically,
+**weekday\_vs\_weekend** shows whether the day is a weekday or weekend;
+**activity\_minute** and **activity\_number** shows the minute for each
+activities.
+
+#### Traditional analyses of accelerometer data
+
+``` r
+# aggregate activity_minute to get total_activity var. for each day
+accelerometer %>% 
+    group_by(week,day) %>% 
+    summarize(total_activity = sum(activity_minute)) %>% 
+    # create a table showing these totals
+    pivot_wider(names_from = day,
+                values_from = total_activity) %>% 
+    knitr::kable()
+```
+
+| week |   Friday |    Monday | Saturday | Sunday | Thursday |  Tuesday | Wednesday |
+| ---: | -------: | --------: | -------: | -----: | -------: | -------: | --------: |
+|    1 | 480542.6 |  78828.07 |   376254 | 631105 | 355923.6 | 307094.2 |    340115 |
+|    2 | 568839.0 | 295431.00 |   607175 | 422018 | 474048.0 | 423245.0 |    440962 |
+|    3 | 467420.0 | 685910.00 |   382928 | 467052 | 371230.0 | 381507.0 |    468869 |
+|    4 | 154049.0 | 409450.00 |     1440 | 260617 | 340291.0 | 319568.0 |    434460 |
+|    5 | 620860.0 | 389080.00 |     1440 | 138421 | 549658.0 | 367824.0 |    445366 |
+
+Apparent trend I noticed is that week 4 and 5’s Saturday both have the
+exact same amount of low activity, so I am a little curious whether that
+two numbers are resulted from reading error or technical error, or the
+person just happen to move less and has the same amount of activity.
+Another potential trend is that this person has relatively the same
+amount of activity on Wednesdays and Thursdays.
+
+#### single-panel plot: 24-hour activity time courses for each day
+
+``` r
+accelerometer %>% 
+    ggplot(aes(x = activity_number, 
+               y = activity_minute, 
+               color = day, group = day_id)) +
+    geom_smooth(se = F, method = "loess", geom = "line", alpha = 0.5) +
+    labs(title = "24-hour activity time courses for each day",
+         x = "Time in a day (in minutes)",
+         y = "Activity Count") +
+    guides(color = guide_legend(nrow = 1, byrow = T))
+```
+
+<img src="p8105_hw3_zw2716_files/figure-gfm/single-panel plot-1.png" width="90%" />
+Based on the above graph, I see the person has more activity during the
+(middle of the) day, and less/no activity during the early morning and
+late night. This makes sense as people generally asleep during the early
+morning and late night, and work during the (middle of the) day. In
+addition, this person seems to very low (almost 0) activities on one
+Saturday and Monday, maybe this is due to the person did not (forgot to)
+put on the accelerometer as him/she started the day.
 
 ### Problem 3
 
