--- a/p8105_hw3_zw2716.md
+++ b/p8105_hw3_zw2716.md
@@ -244,4 +244,105 @@ put on the accelerometer as him/she started the day.
 
 ### Problem 3
 
-First,
+``` r
+data("ny_noaa")
+skimr::skim_without_charts(ny_noaa)
+```
+
+|                                                  |          |
+| :----------------------------------------------- | :------- |
+| Name                                             | ny\_noaa |
+| Number of rows                                   | 2595176  |
+| Number of columns                                | 7        |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_   |          |
+| Column type frequency:                           |          |
+| character                                        | 3        |
+| Date                                             | 1        |
+| numeric                                          | 3        |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ |          |
+| Group variables                                  | None     |
+
+Data summary
+
+**Variable type: character**
+
+| skim\_variable | n\_missing | complete\_rate | min | max | empty | n\_unique | whitespace |
+| :------------- | ---------: | -------------: | --: | --: | ----: | --------: | ---------: |
+| id             |          0 |           1.00 |  11 |  11 |     0 |       747 |          0 |
+| tmax           |    1134358 |           0.56 |   1 |   4 |     0 |       532 |          0 |
+| tmin           |    1134420 |           0.56 |   1 |   4 |     0 |       548 |          0 |
+
+**Variable type: Date**
+
+| skim\_variable | n\_missing | complete\_rate | min        | max        | median     | n\_unique |
+| :------------- | ---------: | -------------: | :--------- | :--------- | :--------- | --------: |
+| date           |          0 |              1 | 1981-01-01 | 2010-12-31 | 1997-01-21 |     10957 |
+
+**Variable type: numeric**
+
+| skim\_variable | n\_missing | complete\_rate |  mean |     sd |   p0 | p25 | p50 | p75 |  p100 |
+| :------------- | ---------: | -------------: | ----: | -----: | ---: | --: | --: | --: | ----: |
+| prcp           |     145838 |           0.94 | 29.82 |  78.18 |    0 |   0 |   0 |  23 | 22860 |
+| snow           |     381221 |           0.85 |  4.99 |  27.22 | \-13 |   0 |   0 |   0 | 10160 |
+| snwd           |     591786 |           0.77 | 37.31 | 113.54 |    0 |   0 |   0 |   0 |  9195 |
+
+The ***ny\_noaa*** shows New York state’s weather data (precipitation,
+snowfall, temperature) from 1981-01-01 to 2010-12-31. ***ny\_noaa*** has
+2595176 rows and 7 columns. The key variables are id, date, prcp, snow,
+snwd, tmax, tmin.
+
+###### Detailed explanation for each variables:
+
+  - id: Weather station ID
+  - date: Date of observation
+  - prcp: Precipitation (tenths of mm)
+  - snow: Snowfall (mm)
+  - snwd: Snow depth (mm)
+  - tmax: Maximum temperature (tenths of degrees C)
+  - tmin: Minimum temperature (tenths of degrees C)
+
+As we can see from the above information, there are a huge amount of
+missing data (by looking at the n\_missing fields), which will be an
+issue for data exploration and analysis.
+
+#### Data Cleaning
+
+``` r
+ny_noaa %>% 
+    separate(date, 
+             into = c("year","month","day"), 
+             sep = "-") %>% 
+    mutate_at(vars(year,month,day), as.factor) %>% 
+    mutate_at(vars(tmax, tmin, prcp, snow, snwd), as.numeric) %>% 
+    mutate(tmax = tmax / 10,
+           tmin = tmin / 10,
+           prcp = prcp / 10)
+```
+
+    ## # A tibble: 2,595,176 x 9
+    ##    id          year  month day    prcp  snow  snwd  tmax  tmin
+    ##    <chr>       <fct> <fct> <fct> <dbl> <dbl> <dbl> <dbl> <dbl>
+    ##  1 US1NYAB0001 2007  11    01       NA    NA    NA    NA    NA
+    ##  2 US1NYAB0001 2007  11    02       NA    NA    NA    NA    NA
+    ##  3 US1NYAB0001 2007  11    03       NA    NA    NA    NA    NA
+    ##  4 US1NYAB0001 2007  11    04       NA    NA    NA    NA    NA
+    ##  5 US1NYAB0001 2007  11    05       NA    NA    NA    NA    NA
+    ##  6 US1NYAB0001 2007  11    06       NA    NA    NA    NA    NA
+    ##  7 US1NYAB0001 2007  11    07       NA    NA    NA    NA    NA
+    ##  8 US1NYAB0001 2007  11    08       NA    NA    NA    NA    NA
+    ##  9 US1NYAB0001 2007  11    09       NA    NA    NA    NA    NA
+    ## 10 US1NYAB0001 2007  11    10       NA    NA    NA    NA    NA
+    ## # … with 2,595,166 more rows
+
+``` r
+# snowfall, find the most commonly obs val
+snowfall = ny_noaa %>% 
+  count(snow) %>%
+  arrange(desc(n))
+```
+
+For snowfall, the most commonly observed value is **0**.  
+This makes sense as snow usually happens around winter time in New York,
+so during most of the year there will not be snow. The second commonly
+observed is **NA** (missing value), then the third commonly observed is
+**25**.
