5. Problem 3, Q2, max tem plot

--- a/p8105_hw3_zw2716.md
+++ b/p8105_hw3_zw2716.md
@@ -1,7 +1,6 @@
 Homework 3
 ================
 Iris (Ziyi) Wang
-2020-10-10
 
 ### Due date
 
@@ -308,7 +307,7 @@ issue for data exploration and analysis.
 #### Data Cleaning
 
 ``` r
-ny_noaa %>% 
+ny_noaa_tidy = ny_noaa %>% 
     separate(date, 
              into = c("year","month","day"), 
              sep = "-") %>% 
@@ -317,32 +316,67 @@ ny_noaa %>%
     mutate(tmax = tmax / 10,
            tmin = tmin / 10,
            prcp = prcp / 10)
-```
 
-    ## # A tibble: 2,595,176 x 9
-    ##    id          year  month day    prcp  snow  snwd  tmax  tmin
-    ##    <chr>       <fct> <fct> <fct> <dbl> <dbl> <dbl> <dbl> <dbl>
-    ##  1 US1NYAB0001 2007  11    01       NA    NA    NA    NA    NA
-    ##  2 US1NYAB0001 2007  11    02       NA    NA    NA    NA    NA
-    ##  3 US1NYAB0001 2007  11    03       NA    NA    NA    NA    NA
-    ##  4 US1NYAB0001 2007  11    04       NA    NA    NA    NA    NA
-    ##  5 US1NYAB0001 2007  11    05       NA    NA    NA    NA    NA
-    ##  6 US1NYAB0001 2007  11    06       NA    NA    NA    NA    NA
-    ##  7 US1NYAB0001 2007  11    07       NA    NA    NA    NA    NA
-    ##  8 US1NYAB0001 2007  11    08       NA    NA    NA    NA    NA
-    ##  9 US1NYAB0001 2007  11    09       NA    NA    NA    NA    NA
-    ## 10 US1NYAB0001 2007  11    10       NA    NA    NA    NA    NA
-    ## # … with 2,595,166 more rows
-
-``` r
 # snowfall, find the most commonly obs val
-snowfall = ny_noaa %>% 
-  count(snow) %>%
-  arrange(desc(n))
+ny_noaa_tidy %>% 
+    count(snow) %>%
+    arrange(desc(n))
 ```
+
+    ## # A tibble: 282 x 2
+    ##     snow       n
+    ##    <dbl>   <int>
+    ##  1     0 2008508
+    ##  2    NA  381221
+    ##  3    25   31022
+    ##  4    13   23095
+    ##  5    51   18274
+    ##  6    76   10173
+    ##  7     8    9962
+    ##  8     5    9748
+    ##  9    38    9197
+    ## 10     3    8790
+    ## # … with 272 more rows
 
 For snowfall, the most commonly observed value is **0**.  
 This makes sense as snow usually happens around winter time in New York,
 so during most of the year there will not be snow. The second commonly
 observed is **NA** (missing value), then the third commonly observed is
 **25**.
+
+#### Two-panel plot for the average max temperature in January and in July in each station across years.
+
+``` r
+ny_noaa_tidy %>%
+    filter(month %in% c("01", "07")) %>%
+    group_by(id,month,year) %>% 
+    summarise(avg_temp = mean(tmax, na.rm = T)) %>%
+    mutate(month = ifelse( month == "01", "January", "July")) %>% 
+    drop_na() %>%
+    ggplot(aes(x = year, y = avg_temp)) +
+    geom_point(aes(color = month)) + 
+    geom_smooth() +
+    theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
+    facet_grid(.~month ) +
+    labs(title = "Average Max Temperature in January and in July in each station across years",
+        x = "Year", y = "Average Max Tempature (C)")
+```
+
+<img src="p8105_hw3_zw2716_files/figure-gfm/max temp-1.png" width="90%" />
+Is there any observable / interpretable structure? Any outliers? From
+the two-panel plot plots above we can see that the average max
+temperature for January is much lower then the average max temperature
+for July. This makes sense, as in New York, summer is in the July, which
+is much hotter than the winter in January.  
+Throughout 1981-2010, we can see an overall trend that the average max
+temperature for January has wider variation (range from -10C to 10C)
+than average max temperature for July (range from 20C to 35C). In terms
+of outliers, both January and July has some outliers for average max
+temperature, this might due to measuring error, reading error, or an
+actually extreme temperature event.
+
+#### Two-panel plot showing tmax vs tmin for the full dataset
+
+(note:scatterplot may not be the best option)
+
+#### Two-panel plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year
