--- a/p8105_hw3_zw2716.Rmd
+++ b/p8105_hw3_zw2716.Rmd
@@ -182,7 +182,7 @@ As we can see from the above information, there are a huge amount of missing dat
 
 #### Data Cleaning
 ```{r load_noaa}
-ny_noaa %>% 
+ny_noaa_tidy = ny_noaa %>% 
     separate(date, 
              into = c("year","month","day"), 
              sep = "-") %>% 
@@ -193,16 +193,32 @@ ny_noaa %>%
            prcp = prcp / 10)
 
 # snowfall, find the most commonly obs val
-snowfall = ny_noaa %>% 
-  count(snow) %>%
-  arrange(desc(n))
+ny_noaa_tidy %>% 
+    count(snow) %>%
+    arrange(desc(n))
 ```
 For snowfall, the most commonly observed value is **0**.  
 This makes sense as snow usually happens around winter time in New York, so during most of the year there will not be snow. The second commonly observed is **NA** (missing value), then the third commonly observed is **25**.
 
 #### Two-panel plot for the average max temperature in January and in July in each station across years. 
 
+```{r max temp, warning = F, message = F}
+ny_noaa_tidy %>%
+    filter(month %in% c("01", "07")) %>%
+    group_by(id,month,year) %>% 
+    summarise(avg_temp = mean(tmax, na.rm = T)) %>%
+    mutate(month = ifelse( month == "01", "January", "July")) %>% 
+    drop_na() %>%
+    ggplot(aes(x = year, y = avg_temp)) +
+    geom_point(aes(color = month)) + 
+    geom_smooth() +
+    theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
+    facet_grid(.~month ) +
+    labs(title = "Average Max Temperature in January and in July in each station across years",
+        x = "Year", y = "Average Max Tempature (C)")
+```
 Is there any observable / interpretable structure? Any outliers? 
-
-
+From the two-panel plot plots above we can see that the average max temperature for January is much lower then the average max temperature for July. This makes sense, as in New York, summer is in the July, which is much hotter than the winter in January.  
+Throughout 1981-2010, we can see an overall trend that the average max temperature for January has wider variation (range from -10C to 10C) than average max temperature for July (range from 20C to 35C). 
+In terms of outliers, both January and July has some outliers for average max temperature, this might due to measuring error, reading error, or an actually extreme temperature event.
 
