--- a/p8105_hw3_zw2716.md
+++ b/p8105_hw3_zw2716.md
@@ -185,10 +185,10 @@ Data summary
 After tidy and wrangle the data, the resulting ***accelerometer*** data
 contains 50400 rows and 6 columns. The variables in the
 ***accelerometer*** are: week, day\_id, day, activity\_number,
-activity\_minute, week\_end\_vs\_day. Specifically,
-**weekday\_vs\_weekend** shows whether the day is a weekday or weekend;
-**activity\_minute** and **activity\_number** shows the minute for each
-activities.
+activity\_minute, week\_end\_vs\_day.  
+Specifically, **weekday\_vs\_weekend** shows whether the day is a
+weekday or weekend; **activity\_minute** and **activity\_number** shows
+the minute for each activities.
 
 #### Traditional analyses of accelerometer data
 
@@ -214,7 +214,7 @@ accelerometer %>%
 Apparent trend I noticed is that week 4 and 5’s Saturday both have the
 exact same amount of low activity, so I am a little curious whether that
 two numbers are resulted from reading error or technical error, or the
-person just happen to move less and has the same amount of activity.
+person just happen to move less and has the same amount of activity.  
 Another potential trend is that this person has relatively the same
 amount of activity on Wednesdays and Thursdays.
 
@@ -233,6 +233,7 @@ accelerometer %>%
 ```
 
 <img src="p8105_hw3_zw2716_files/figure-gfm/single-panel plot-1.png" width="90%" />
+
 Based on the above graph, I see the person has more activity during the
 (middle of the) day, and less/no activity during the early morning and
 late night. This makes sense as people generally asleep during the early
@@ -359,24 +360,61 @@ ny_noaa_tidy %>%
     theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
     facet_grid(.~month ) +
     labs(title = "Average Max Temperature in January and in July in each station across years",
-        x = "Year", y = "Average Max Tempature (C)")
+        x = "Year", 
+        y = "Average Max Tempature (C)")
 ```
 
 <img src="p8105_hw3_zw2716_files/figure-gfm/max temp-1.png" width="90%" />
-Is there any observable / interpretable structure? Any outliers? From
-the two-panel plot plots above we can see that the average max
+
+From the two-panel plot plots above we can see that the average max
 temperature for January is much lower then the average max temperature
 for July. This makes sense, as in New York, summer is in the July, which
-is much hotter than the winter in January.  
-Throughout 1981-2010, we can see an overall trend that the average max
-temperature for January has wider variation (range from -10C to 10C)
-than average max temperature for July (range from 20C to 35C). In terms
-of outliers, both January and July has some outliers for average max
-temperature, this might due to measuring error, reading error, or an
-actually extreme temperature event.
+is much hotter than the winter in January.
 
-#### Two-panel plot showing tmax vs tmin for the full dataset
+Throughout 1981-2010, we can see an overall trend that the average max c
+for January has wider variation (range from -10C to 10C) than average
+max temperature for July (range from 20C to 35C). In terms of outliers,
+both January and July has some outliers for average max temperature,
+this might due to measuring error, reading error, or an actually extreme
+temperature event.
 
-(note:scatterplot may not be the best option)
+#### Two-panel plot showing (i) tmax vs tmin for the full dataset; and (ii) distribution of snowfall values \> 0 and \< 100 separately by year
 
-#### Two-panel plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year
+``` r
+tmax_vs_tmin = ny_noaa_tidy %>%
+    ggplot(aes(x = tmax, y = tmin)) + 
+    geom_bin2d() +
+    labs(title = "Min vs Max Tempatures",
+         x = "Max temperature (C)",
+         y = "Min temperature (C)") 
+```
+
+``` r
+dist_snow = ny_noaa_tidy %>%
+    filter(snow > 0 & snow < 100) %>%
+    group_by(year) %>%
+    ggplot(aes(x = year, y = snow)) +
+    geom_boxplot() +
+    stat_summary(fun = "median", color = "blue") +
+    theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
+    labs(title = "Distribution of Snowfall",
+         x = "Years", 
+         y = "Snowfall (mm)") 
+```
+
+``` r
+(tmax_vs_tmin / dist_snow)
+```
+
+<img src="p8105_hw3_zw2716_files/figure-gfm/final two-panel plot-1.png" width="90%" />
+
+From the top plot in our two-panel plot, we can see that the min and max
+temperatures is centered in the middle of the plot with two bright
+yellow box showing the most commonly observed values (min at 0C and 20C;
+max at 5C and 25C).
+
+There are also many overlapping values for min and max temperatures.
+From the bottom plot in our two-panel plot, we can see that the
+distribution of snowfall has consistent/similar mean and IQR since 1982
+to 2010, which is quite surprising to me. I am curious about any reason
+behinds it.
